# data_make_some_pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/internal/: data_template.py  inputs.py  pdf_filler.py  struct.py  templates.py
data/: filling_data_example.csv
front/: index.html  merge.html  script.js  style.css
script/: __init__.py  create_blank_pdf.py
tests/: test_router.py  test_scripts.py
