[project]
name = "data-make-some-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "reportlab>=4.4.1",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."

