[project]
name = "data-make-some-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.1",
    "ruff>=0.11.12",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."

